--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "npm run clean && babel src -d lib",
     "clean": "rimraf lib/*",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "standard"
   },
   "engines": {
     "node": ">=0.10.x"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "standard": "^7.1.2"
   }
 }
