--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "description": "A Disqus adapter for hubot",
   "license": "MIT",
   "author": "Jesús Lobos <jlobitu@gmail.com>",
-  "main": "lib/disqus.js",
+  "main": "src/disqus.js",
   "scripts": {
-    "build": "npm run clean && babel src -d lib",
-    "clean": "rimraf lib/*",
-    "prepublish": "npm run build",
-    "test": "standard"
+    "lint": "standard"
   },
   "engines": {
-    "node": ">=0.10.x"
+    "node": ">=6"
   },
   "files": [
-    "lib/disqus.js"
+    "index.js"
   ],
   "keywords": [
     "hubot",
@@ -27,9 +24,6 @@
     "neo-disqus": "0.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0",
-    "rimraf": "^2.5.4",
     "standard": "^10.0.1"
   }
 }
